--- a/app/src/main/resources/scss/style.scss
+++ b/app/src/main/resources/scss/style.scss
@@ -1,6 +1,7 @@
 $primary: #43e2b2;
 $dark: #342e37;
 $light: #fff;
+$sidebar-width: 300px;
 
 @import '../bootstrap-5.0.0-beta2/scss/bootstrap.scss';
 
@@ -14,6 +15,7 @@ body{
 section.body{
   display: grid;
   grid-template-areas: 'menu content';
+  grid-template-columns: 300px auto;
 
   .btn-round{
     border-radius: 50px;
@@ -24,8 +26,7 @@ section.body{
     background-color: $dark;
     min-height: 100vh;
     position: fixed;
-    width: 300px;
-    grid-area: menu;
+    width: $sidebar-width;
   
     .logo{
       color: $primary;
@@ -33,11 +34,12 @@ section.body{
     }
     li{
       color:$primary;
+      font-weight: bold;
+      text-decoration: none;
     }
     .nav-logout{
       position: absolute;
       bottom: 5%;
-      font-weight: bold;
     }
   }
 
@@ -45,13 +47,23 @@ section.body{
     background-image: url('../img/background.png');
     background-size: cover;
     min-height: 100vh;
-    padding: 10px;
     grid-area: content;
-    margin-left: 300px;
-    width: calc(100vw - 300px);
+    margin-left: -$sidebar-width;
+    width: calc(100vw - $sidebar-width);
 
     .heading{
       text-align: center;
+      position: relative;
+
+      .head-svg{
+        display: block;
+        height: 2em;
+        width: 2em;
+        filter: invert(15%) sepia(7%) saturate(1322%) hue-rotate(236deg) brightness(90%) contrast(85%);
+        float: left;
+        position: absolute;
+        left: 50%;
+      }
     }
     
     .content{
@@ -79,22 +91,18 @@ section.body{
 
 }
 
-.nav-home::before{
-  content: url(../img/nav_home.png);
-  display: inline-block;
-  background-size: 1em;
+.nav-svg>svg{
+  display: block;
+  color: $primary;
+  height: 1.8em;
+  width: 1.8em;
+  position: absolute;
+  margin-left: -1em;
+  margin-top: 0.2em;
+  filter: invert(85%) sepia(15%) saturate(1694%) hue-rotate(99deg) brightness(93%) contrast(90%);
 }
 
-.nav-user::before{
-
-}
-
-.nav-session{
-
-}
-.nav-series{
-
-}
-.nav-logout{
-
+li.nav-link{
+  display: block;
+  position: relative;
 }
