--- a/app/bin/main/scss/style.scss
+++ b/app/bin/main/scss/style.scss
@@ -1,10 +1,9 @@
 $primary: #43e2b2;
 $dark: #342e37;
-$light: #fff;
+$light: #ffffff;
 $sidebar-width: 300px;
 
 @import '../bootstrap-5.0.0-beta2/scss/bootstrap.scss';
-@import '../bootstrap-icons-1.3.0/bootstrap-icons.css';
 
 body{
   width: 100vw;
@@ -33,11 +32,17 @@ section.body{
       color: $primary;
       text-align: center;
     }
-    li{
+    .nav-link a{
       color:$primary;
       font-weight: bold;
       text-decoration: none;
+      font-size: 1.4em;
     }
+
+    .nav-link.active>a{
+      color: $light!important;
+    }
+
     .nav-logout{
       position: absolute;
       bottom: 5%;
@@ -54,15 +59,8 @@ section.body{
     .heading{
       text-align: center;
       position: relative;
-
-      .head-svg{
-        display: block;
-        height: 2em;
-        width: 2em;
-        filter: invert(15%) sepia(7%) saturate(1322%) hue-rotate(236deg) brightness(90%) contrast(85%);
-        float: left;
-        position: absolute;
-        left: 50%;
+      h1{
+        margin-top: 0.4em;
       }
     }
     
@@ -89,20 +87,4 @@ section.body{
     }
   }
 
-}
-
-.nav-svg>svg{
-  display: block;
-  color: $primary;
-  height: 1.8em;
-  width: 1.8em;
-  position: absolute;
-  margin-left: -1em;
-  margin-top: 0.2em;
-  filter: invert(85%) sepia(15%) saturate(1694%) hue-rotate(99deg) brightness(93%) contrast(90%);
-}
-
-li.nav-link{
-  display: block;
-  position: relative;
 }
