--- a/app/src/main/resources/scss/style.scss
+++ b/app/src/main/resources/scss/style.scss
@@ -88,3 +88,24 @@ section.body{
   }
 
 }
+.videobg{
+  position: absolute;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+  filter: blur(4px);
+}
+.landingcontainer{
+  text-align: center;
+  .title{
+    display: inline-block;
+    background-image: linear-gradient(135deg, #24AFAF,#43E2B2);
+    color: white;
+    font-weight: bold;
+    font-size:78px;
+    font-family: 'PT Mono', monospace;
+    padding: 24px;
+    border-radius: 20px;
+  }
+
+}
