--- a/app/bin/main/scss/style.scss
+++ b/app/bin/main/scss/style.scss
@@ -3,7 +3,7 @@ $dark: #342e37;
 $light: #ffffff;
 $sidebar-width: 300px;
 
-@import '../bootstrap-5.0.0-beta2/scss/bootstrap.scss';
+@import '../modules/bootstrap-5.0.0-beta2/scss/bootstrap.scss';
 
 body{
   width: 100vw;
