--- a/app/src/main/resources/scss/index.scss
+++ b/app/src/main/resources/scss/index.scss
@@ -2,6 +2,9 @@ $primary: #43e2b2;
 $dark: #342e37;
 $light: #ffffff;
 $sidebar-width: 300px;
+$happy: #41e147;
+$neutral: #e0e041;
+$sad: #e05841;
 
 @import '../modules/bootstrap-5.0.0-beta2/scss/bootstrap.scss';
 
@@ -111,4 +114,8 @@ section.body{
 }
 .sg{
   
+}
+
+.invalid{
+  border: solid 2px lighten($sad, 30%);
 }
