--- a/app/src/main/resources/velocity/index.vm
+++ b/app/src/main/resources/velocity/index.vm
@@ -1,19 +1,32 @@
-#parse("/velocity/layout.vm")
-#@mainLayout()
-    <h1 style="width: 500px; margin: 0 auto; padding-bottom: 10px;">$msg</h1>
 
-    <div id="login-button">
-        <!--<from action="https://$address/login">
-            <div><input id="submitlogin" type="submit" value="login" /></div>
-        </form>-->
-        <a href="https://$address/login">login</a>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- Bootstrap icons -->
+  <link rel="stylesheet" href="../modules/bootstrap-icons-1.3.0/bootstrap-icons.css">
+  <!-- App styling -->
+  <link rel="stylesheet" href="../css/index.css">
 
-    <div id="word-form">
-        <form method = GET action="https://$address/search">
-            <div><input type="text" name="search" id="word" placeholder="Search Bar" onkeypress="return /[a-z]/i.test(event.key)" /></div>
-            <div><input id="submit" type="submit" value="Search" /></div>
-        </form>
-    </div>
-
-#end
+  <!-- Cookies library to easily handle cookies -->
+  <script src="../modules/js.cookie.js"></script>
+  <!-- jQuery -->
+  <script src="../modules/jquery-3.5.1.min.js"></script>
+  <!-- React modules -->
+  <script src="../modules/react.production.min.js"></script>
+  <script src="../modules/react-dom.production.min.js"></script>
+  <!-- Babel for compiling text/babel, JSX files -->
+  <!-- TODO remove before production -->
+  <script src="../modules/babel.min.js"></script>
+  <!-- Bootstrap js -->
+  <script src="../modules/bootstrap-5.0.0-beta2/dist/js/bootstrap.min.js"></script>
+  <!-- App -->
+  <script src="../static/index.js" type="text/babel"></script>
+</head>
+<body>
+  <div id="app"></div>
+</body>
+</html>
