--- a/app/src/main/resources/velocity/index.vm
+++ b/app/src/main/resources/velocity/index.vm
@@ -7,24 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- Bootstrap icons -->
-  <link rel="stylesheet" href="../modules/bootstrap-icons-1.3.0/bootstrap-icons.css">
+  <link rel="stylesheet" href="./modules/bootstrap-icons-1.3.0/bootstrap-icons.css">
   <!-- App styling -->
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="./index.css">
 
   <!-- Cookies library to easily handle cookies -->
-  <script src="../modules/js.cookie.js"></script>
+  <script src="./modules/js.cookie.js"></script>
   <!-- jQuery -->
-  <script src="../modules/jquery-3.5.1.min.js"></script>
+  <script src="./modules/jquery-3.5.1.min.js"></script>
   <!-- React modules -->
-  <script src="../modules/react.production.min.js"></script>
-  <script src="../modules/react-dom.production.min.js"></script>
+  <script src="./modules/react.production.min.js"></script>
+  <script src="./modules/react-dom.production.min.js"></script>
   <!-- Babel for compiling text/babel, JSX files -->
   <!-- TODO remove before production -->
-  <script src="../modules/babel.min.js"></script>
+  <script src="./modules/babel.min.js"></script>
   <!-- Bootstrap js -->
-  <script src="../modules/bootstrap-5.0.0-beta2/dist/js/bootstrap.min.js"></script>
+  <script src="./modules/bootstrap-5.0.0-beta2/dist/js/bootstrap.min.js"></script>
   <!-- App -->
-  <script src="../static/index.js" type="text/babel"></script>
+  <script src="./index.js" type="text/babel"></script>
 </head>
 <body>
   <div id="app"></div>
