--- a/app/src/main/resources/velocity/index.vm
+++ b/app/src/main/resources/velocity/index.vm
@@ -9,7 +9,7 @@
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="./modules/bootstrap-icons-1.3.0/bootstrap-icons.css">
   <!-- App styling -->
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./css/index.css">
 
   <!-- Cookies library to easily handle cookies -->
   <script src="./modules/js.cookie.js"></script>
@@ -23,10 +23,10 @@
   <script src="./modules/babel.min.js"></script>
   <!-- Bootstrap js -->
   <script src="./modules/bootstrap-5.0.0-beta2/dist/js/bootstrap.min.js"></script>
-  <!-- App -->
-  <script src="./index.js" type="text/babel"></script>
 </head>
 <body>
   <div id="app"></div>
+  <!-- App -->
+  <script src="./js/dist/main.js"></script>
 </body>
 </html>
