modules import moved to js file

--- a/app/src/main/resources/static/scss/index.scss
+++ b/app/src/main/resources/static/scss/index.scss
@@ -6,7 +6,7 @@ $happy: #41e147;
 $neutral: #e0e041;
 $sad: #e05841;
 
-@import '../modules/bootstrap-5.0.0-beta2/scss/bootstrap.scss';
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 body{
   width: 100vw;
