--- a/app/src/main/resources/velocity/index.vm
+++ b/app/src/main/resources/velocity/index.vm
@@ -1,32 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Project CS261 | Group 45</title>
   <!-- Bootstrap icons -->
-  <link rel="stylesheet" href="./modules/bootstrap-icons-1.3.0/bootstrap-icons.css">
+  <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
   <!-- App styling -->
   <link rel="stylesheet" href="./css/index.css">
-
-  <!-- Cookies library to easily handle cookies -->
-  <script src="./modules/js.cookie.js"></script>
-  <!-- jQuery -->
-  <script src="./modules/jquery-3.5.1.min.js"></script>
-  <!-- React modules -->
-  <script src="./modules/react.production.min.js"></script>
-  <script src="./modules/react-dom.production.min.js"></script>
-  <!-- Babel for compiling text/babel, JSX files -->
-  <!-- TODO compile and remove before production -->
-  <script src="./modules/babel.min.js"></script>
   <!-- Bootstrap js -->
-  <script src="./modules/bootstrap-5.0.0-beta2/dist/js/bootstrap.min.js"></script>
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
   <!-- App -->
-  <script src="./js/dist/main.js"></script>
+  <script src="./js/dist/index.js"></script>
 </body>
 </html>
