--- a/app/bin/main/velocity/index.vm
+++ b/app/bin/main/velocity/index.vm
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project CS261 | Group 45</title>
   <!-- Bootstrap icons -->
-  <link rel="stylesheet" href="../static/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
   <!-- App styling -->
-  <link rel="stylesheet" href="../static/css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <!-- Bootstrap js -->
-  <script src="../static/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
   <!-- App -->
-  <script src="../static/js/dist/index.js"></script>
+  <script src="./js/dist/index.js"></script>
 </body>
 </html>
