--- a/app/bin/main/static/scss/index.scss
+++ b/app/bin/main/static/scss/index.scss
@@ -112,10 +112,40 @@ section.body{
   }
 
 }
-.sg{
-  
-}
+
 
 .invalid{
   border: solid 2px lighten($sad, 30%);
+}
+
+.registerIcon{
+  display: flex;
+  justify-content: center;
+}
+
+.register-right-side{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  margin-top: 64px;
+}
+
+.form-row{
+  margin-top: 32px;
+}
+
+.register-left-side{
+  background-image: linear-gradient(#43E2B2,#24AFAF);
+  padding: 32px;
+  border-radius: 50px;
+  margin-right: 64px;
+  margin-top: 64px;
+}
+
+.terms{
+  background-color: #43E2B2;
+  margin-top: 32px;
+  margin-bottom:32px;
+  justify-self: left;
+  border-radius: 10px;
 }
