--- a/Project/app/src/main/resources/velocity/index.vm
+++ b/Project/app/src/main/resources/velocity/index.vm
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project CS261 | Group 45</title>
   <!-- Bootstrap icons -->
-  <link rel="stylesheet" href="http://localhost:6969/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="http://$address/node_modules/bootstrap-icons/font/bootstrap-icons.css">
   <!-- App styling -->
-  <link rel="stylesheet" href="http://localhost:6969/css/index.css">
+  <link rel="stylesheet" href="http://$address/css/index.css">
   <!-- Bootstrap js -->
-  <script src="http://localhost:6969/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="http://$address/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div id="app"></div>
   <!-- App -->
-  <script src="http://localhost:6969/js/dist/index.js"></script>
+  <script src="http://$address/js/dist/index.js"></script>
 </body>
 </html>
