--- a/Project/app/src/main/resources/templates/layout.html
+++ b/Project/app/src/main/resources/templates/layout.html
@@ -5,13 +5,13 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Logged in Home page</title>
+	<title>Create User</title>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
 	</script>
 	<link rel="stylesheet" href="../static/css/index.css" />
-	<link rel="stylesheet" href="../bootstrap-icons-1.3.0/bootstrap-icons.css">
-	<script src="../bootstrap-5.0.0-beta2/dist/js/bootstrap.js"></script>
+	<link rel="stylesheet" href="../static/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+	<script src="../static/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
