--- a/Project/app/bin/main/templates/register.html
+++ b/Project/app/bin/main/templates/register.html
@@ -9,8 +9,8 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="../static/css/index.css" />
-    <link rel="stylesheet" href="../bootstrap-icons-1.3.0/bootstrap-icons.css">
-    <script src="../bootstrap-5.0.0-beta2/dist/js/bootstrap.js"></script>
+    <link rel="stylesheet" href="../static/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <script src="../static/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color: #342E37;">
     <div class="registerBackground">
