Create session CSS + HTML

--- a/Project/app/src/main/resources/static/scss/index.scss
+++ b/Project/app/src/main/resources/static/scss/index.scss
@@ -247,7 +247,13 @@ section.body{
     background-color:rgba(255, 255, 255, .5);
   }
 }
-
+.sessionprivate{
+  display: flex;
+  flex-direction: row;
+  .private{
+    margin-left: 8px;
+  }
+}
 
 
 
