--- a/Project/app/bin/main/static/scss/index.scss
+++ b/Project/app/bin/main/static/scss/index.scss
@@ -261,6 +261,8 @@ section.body{
   background-size: cover;
   border-radius:50px;
   height:80vh;
+  overflow-y: scroll;
+  
   .sessiongrid{
     display:grid;
     grid-template-columns: auto auto auto;
@@ -276,6 +278,132 @@ section.body{
     }
     .sessiongridchild:hover{
       box-shadow: 10px 10px $dark;
+    }
+  }
+}
+.sessiongridcontainer::-webkit-scrollbar {
+  display: none;
+}
+.chat-container{
+  background-color: $dark;
+  border-radius: 25px;
+  padding-left:16px;
+  padding-right:32px;
+  padding-bottom: 8px;
+
+  .chat-scroll{
+    height:300px;
+    overflow-y: scroll;
+    .chat-msg{
+      padding: 4px;
+      background-color: $primary;
+      border-radius: 10px;
+      margin-bottom: 16px;
+    }
+  }
+  .chat-scroll::-webkit-scrollbar {
+    display: none;
+  }
+
+  
+
+  .chat-input{
+    display: flex;
+    flex-direction: row;
+    padding: 4px;
+    padding-left:16px;
+    background-color: white;
+    border-radius:15px;
+
+    .transparent-button{
+      background-color: white;
+      color: $primary;
+      border: none;
+      margin:none;
+      padding: none;
+      float: right;
+      vertical-align: middle;
+    }
+    input[type=text]{
+      border: none;
+      margin:none;
+      padding: none;
+      width:100%;
+      border-top-style: hidden;
+      border-right-style: hidden;
+      border-left-style: hidden;
+      border-bottom-style: hidden;
+    }
+    
+    input[type=text]:focus{
+      outline:none;
+    }
+    
+    
+  }
+  .chat-anonymous{
+    display:flex;
+    flex-direction: row;
+    margin-bottom: 24px;
+    input[type=checkbox]{
+      margin-right: 8px;
+      padding: none;
+    }
+    .anonymous{
+      color: white;
+    }
+  }
+  
+}
+
+.question-container{
+  display:flex;
+  flex-direction: row;
+  margin-bottom: 32px;
+  height:500px;
+  width:50%;
+  .question-left{
+    width:33.3%;
+    background-color: $dark;
+    padding:16px;
+    border-radius:25px 0px 0px 25px;
+    .questions{
+      color:$primary;
+      margin-bottom: 8px;
+    }
+    .question-scroll{
+      height:400px;
+      overflow-y: scroll;
+    }
+    .question-scroll::-webkit-scrollbar {
+      display: none;
+    }
+  } 
+  .question-right{
+    width:66.7%;
+    background-color: #ffffff;
+    padding:16px;
+    border-radius:0px 25px 25px 0px;  
+    .content{
+      width:100%;
+      height:450px;
+      overflow-y: scroll;
+      .question-host{
+        width:100%;
+        .answer{
+          border: 1px solid black;
+          border-radius: 15px;
+          padding: 8px;
+          width:100%;
+          margin-bottom:16px;
+        }
+      }
+      .question-att{
+  
+      }
+    }
+    .content::-webkit-scrollbar {
+      display: none;
     }
   }
 }
