profile CSS + HTML

--- a/Project/app/src/main/resources/static/scss/index.scss
+++ b/Project/app/src/main/resources/static/scss/index.scss
@@ -408,3 +408,10 @@ section.body{
   }
 }
 
+.profile-element{
+  padding:8px;
+  margin:16px;
+  border-radius: 15px;
+  background-color: $dark;
+}
+
