--- a/Project/app/src/main/resources/static/scss/index.scss
+++ b/Project/app/src/main/resources/static/scss/index.scss
@@ -414,6 +414,34 @@ section.body{
   border-radius: 15px;
   background-color: $dark;
 }
+.happy{
+  border:none;
+  width:75px;
+  height:75px;
+  background-color: transparent;
+  i{
+    font-size: 72px;
+  }
+}
+.neutral{
+  border:none;
+  width:75px;
+  height:75px;
+  background-color: transparent;
+  i{
+    font-size: 72px;
+  }
+}
+.sad{
+  border:none;
+  width:75px;
+  height:75px;
+  background-color: transparent;
+  i{
+    font-size: 72px;
+  }
+}
+
 .happy.active{
   color:$happy;
 }
@@ -422,6 +450,18 @@ section.body{
 }
 .sad.active{
   color:$sad;
+}
+
+.emoji-buttons-cont{
+  display: flex;
+  flex-direction: row;
+  width:100%;
+  justify-content: space-evenly;
+  margin-bottom: 100px;
+}
+
+.reactiontextbox{
+  
 }
 
 
