--- a/Project/app/bin/main/static/css/index.css
+++ b/Project/app/bin/main/static/css/index.css
@@ -11349,6 +11349,11 @@ fieldset:disabled .btn {
   float: right;
 }
 
+.question-list .active {
+  background-color: #ffffff;
+  color: #342e37;
+}
+
 body {
   width: 100vw;
   margin: 0;
