--- a/Project/app/src/main/resources/static/scss/_session.scss
+++ b/Project/app/src/main/resources/static/scss/_session.scss
@@ -41,6 +41,14 @@ $happy: $mood-21;
     
     .controllers{
       float: right;
+
+      .control{
+        opacity: 0.7;
+
+        &:hover{
+          opacity: 1;
+        }
+      }
     }
   
     
@@ -67,16 +75,53 @@ $happy: $mood-21;
   }
 }
 
-.reaction-btn{
-  width: 100%;
-  height: 150px;
+// reactions 
 
-  .reaction{
-    width: 50px;
-    height: 50px;
-    border: 0;
-    border-radius: 50%;
-    font-size: xx-large;
-    cursor: pointer;
+.reaction{
+  cursor: pointer;
+}
+.happy:hover {
+  color: lighten($happy, 5%);
+}
+.neutral:hover{
+  color: lighten($neutral, 5%);
+}
+.sad:hover{
+  color: lighten($sad, 5%);
+}
+
+// chat style
+
+.chat-msg,.question-host{
+  padding-left: .5rem;
+  padding-right: .5rem;
+
+  .stamp{
+    float: right;
+    color: $dark;
+    opacity: 0.8;
+    padding-right: 1rem;
   }
+  
+  .user-profile{
+    font-size: x-large;
+  }
+
+  p{
+    margin: 0;
+  }
+}
+
+// answer list 
+
+.answer[data-smiley="1"] {
+  background-color: lighten($sad, 10%);
+}
+
+.answer[data-smiley="2"] {
+  background-color: lighten($neutral, 10%);
+}
+
+.answer[data-smiley="3"] {
+  background-color: lighten($happy, 10%);
 }
