--- a/Project/app/src/main/resources/static/scss/index.scss
+++ b/Project/app/src/main/resources/static/scss/index.scss
@@ -362,7 +362,7 @@ section.body{
   flex-direction: row;
   margin-bottom: 32px;
   height:500px;
-  width:50%;
+  width:100%;
   .question-left{
     width:33.3%;
     background-color: $dark;
@@ -467,6 +467,25 @@ section.body{
   border-radius:25px;
   background-color: $primary;
   padding:8px;
+}
+
+.att-layout{
+  display: flex;
+  flex-direction: row;
+  width:100%;
+  height:85%;
+  .q{
+    width:60%;
+    align-self: start;
+  }
+  .c{
+    width:400px;
+    align-self:flex-end;
+    margin-left: auto;
+  }
+}
+.h95{
+  height:97%;
 }
 
 
