--- a/Project/app/src/main/resources/static/scss/_session.scss
+++ b/Project/app/src/main/resources/static/scss/_session.scss
@@ -125,3 +125,29 @@ $happy: $mood-21;
 .answer[data-smiley="3"] {
   background-color: lighten($happy, 10%);
 }
+
+.circle{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+
+  box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+  animation: pulse 2.5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+  
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
