--- a/Project/app/src/main/resources/static/scss/_mobile.scss
+++ b/Project/app/src/main/resources/static/scss/_mobile.scss
@@ -1,5 +1,85 @@
 @media (max-width: 576px) {
-  .menu{
-    background-color: red;
+  section.body{
+    display: block;
+    padding-bottom: 70px;
+
+    .menu{
+      background-color: red;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      min-height: 0;
+      height: 70px;
+      display: grid;
+
+      .nav-link{
+        align-items: stretch;
+        display: inline-block;
+      }
+    }
+
+    .main{
+      min-height: 100vh;
+      width: 100%;
+
+      .heading>h1{
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        margin:0;
+      }
+
+      .conent{
+
+      }
+    }
+    
+  }
+
+  .sessiongridcontainer{
+    .sessiongrid{
+      grid-template-columns: auto;
+    }
+  }
+
+  .att-layout{
+    flex-direction: column;
+
+    .q{
+      width: 100%;
+      height: auto;
+    }
+    .c{
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  .question-container{
+    flex-direction: column;
+    height: auto;
+
+    .question-left{
+      width: 100%;
+      border-radius: 25px 25px 0 0;
+
+      .question-scroll{
+        max-height: 400px;
+        height: auto;
+      }
+    }
+    .question-right{
+      width: 100%;
+      border-radius: 0 0 25px 25px;
+
+      .content{
+        height: auto;
+      }
+    }
+  }
+
+  .chat-container{
+    .chat-scroll{
+      height: 60vh;
+    }
   }
 }
