--- a/Project/app/src/main/resources/static/scss/_chat.scss
+++ b/Project/app/src/main/resources/static/scss/_chat.scss
@@ -5,9 +5,11 @@
     padding-right:32px;
     padding-bottom: 8px;
     height:100%;
+    max-height: 675px;
   
     .chat-scroll{
-      height: 450px;
+      height:100%;
+      max-height:525px;
       overflow-y: scroll;
       .chat-msg{
         padding: 4px;
