--- a/Project/app/src/main/resources/static/scss/_layout.scss
+++ b/Project/app/src/main/resources/static/scss/_layout.scss
@@ -24,8 +24,7 @@ section.body{
         text-decoration: none;
         font-size: 1.4em;
       }
-  
-      .nav-link.active>a{
+      .active{
         color: $light!important;
       }
   
