--- a/Project/app/src/main/resources/static/scss/_mySession.scss
+++ b/Project/app/src/main/resources/static/scss/_mySession.scss
@@ -1,5 +1,5 @@
 .sessiongridcontainer{
-    margin-top: 5%;
+    margin-top: 32px;
     background-image: url('../img/secondary-background.png');
     background-size: cover;
     border-radius:50px;
@@ -8,7 +8,7 @@
     
     .sessiongrid{
       display:grid;
-      grid-template-columns: auto auto auto;
+      grid-template-columns: 33% 33% 33%;
       padding: 16px;
       
       .sessiongridchild{
