--- a/Project/app/src/main/resources/static/scss/_session.scss
+++ b/Project/app/src/main/resources/static/scss/_session.scss
@@ -151,3 +151,8 @@ $happy: $mood-21;
     box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
+
+.chart{
+  padding: 1rem;
+  border-radius: 15px;
+}
